--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto - Curriculum vitae</title>
+    <link rel="stylesheet" src="css/estilo.css">
 </head>
 <body>
+     <header>
+        <div id="encabezado">
+            <img src="img/66.jpg" alt="foto de perfil">  
+            <h1>Martin Cabrera</h1>
+            <h2>Diseñador Web</h2>
+        </div>
+       
+     </header>
+     <nav>
+
+     </nav>
+     <aside>
+
+     </aside>
+     <article>
+
+     </article>
+     <footer>
+
+     </footer> 
     
+    <script src="js/miscript.js"></script>
 </body>
 </html>
