--- a/index.html
+++ b/index.html
@@ -5,30 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto - Curriculum vitae</title>
-    <link rel="stylesheet" src="css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <script src="https://kit.fontawesome.com/308165822a.js" crossorigin="anonymous"></script>
 </head>
 <body>
      <header>
-        <div id="encabezado">
-            <img src="img/66.jpg" alt="foto de perfil">  
-            <h1>Martin Cabrera</h1>
-            <h2>Diseñador Web</h2>
-        </div>
-       
+            <img class="fotito" src="img/66.jpg" alt="foto de perfil"> 
+            <h1 class="nombre-fotito">Martin Cabrera</h1>
+            <h2 class="profesion-fotito">Diseñador Web</h2>
      </header>
      <nav>
-
+       <ul>
+            <li> <a href="#formacion">Formación academica</a></li>
+            <li> <a href="#experiencia">  |     Experiencia Laboral</a></li>
+            <li> <a href="#habilidades">  |     Habilidades</a></li>
+            <li> <a href="#contacto">  |     Datos de contacto</a></li>
+       </ul>
      </nav>
      <aside>
-
+        <h2 class="perfil" id="#contacto"><i class="fa-solid fa-address-card"></i> Contacto</h2>
+        <p><i class="fa-solid fa-at"></i> Email: martin@gmail.com</p>
+        <p><i class="fa-solid fa-house"></i> Dirección: Salta 735</p>
+        <p><i class="fa-regular fa-map"></i> Ciudad: San Miguel de Tucumán</p>
+        <p><i class="fa-solid fa-phone"></i> Telefono: 3815292629</p>
+        <br>
+        <br>
+        <h2 class="perfil" id="habilidades"><i class="fa-solid fa-turn-up"></i> Habilidades</h2>
      </aside>
      <article>
+        <h2 class="perfil"><i class="fa-solid fa-user"></i> Perfil</h2>
+        <p class="miperfil">Eficiente Administrativo de Ventas con más de 5 años de experiencia en el área de 
+                facturación electrónica y manual, notas de crédito y atención a clientes. Aprendo muy rápido y me adapto 
+                fácilmente a cualquier tipo de proceso interno. He enfrentado crisis económicas fuertes en las empresas para 
+                las que he trabajado, desarrollando alta tolerancia al trabajo bajo presión, capacidad de trabajo en equipo 
+                y solución de problemas. Como trabajo paralelo llevaba diseñando paginas desde más de 10 años solo como hobbie hasta que 
+                empecé a ofrecer mis servicios desde el 2021.</p>
+                <br>
+        <h2 class="perfil" id="formacion"><i class="fa-solid fa-graduation-cap"></i> Formación Academica</h2>
+        <h4> 2010-2021 Administrativo en "La Sevillanita SRL"</h4>
+        <p>Me desempeñe realizando tareas administrativas de liquidación de sueldos, facturación, programación de tareas, inventarios, 
+            control de stock, seguimiento de transporte a través de gps,cargas en el sistema admis citrix y manejo del sistema SAP
+        </p>
+        <h4> 2021-Actualidad Diseñador Web</h4>
+        <p>Actualmente me encuentro realizando paginas web para negocios locales y algunas aplicaciones de Android, para web uso
+            html, css y javascript
+        </p>
+        <br>
+        <h2 class="perfil" id="experiencia"><i class="fa-solid fa-briefcase"></i> Experiencia Laboral</h2>
+        <h4> 2010-2021 Administrativo en "La Sevillanita SRL"</h4>
+        <p>Me desempeñe realizando tareas administrativas de liquidación de sueldos, facturación, programación de tareas, inventarios, 
+            control de stock, seguimiento de transporte a través de gps,cargas en el sistema admis citrix y manejo del sistema SAP
+        </p>
+        <h4> 2021-Actualidad Diseñador Web</h4>
+        <p>Actualmente me encuentro realizando paginas web para negocios locales y algunas aplicaciones de Android, para web uso
+            html, css y javascript
+        </p>
 
      </article>
      <footer>
 
      </footer> 
     
-    <script src="js/miscript.js"></script>
+    <!-- <script src="js/miscript.js"></script> -->
 </body>
 </html>
