--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li> <a href="#contacto">  |     Datos de contacto</a></li>
        </ul>
      </nav>
+     <div class="centro">
      <aside>
         <h2 class="perfil" id="#contacto"><i class="fa-solid fa-address-card"></i> Contacto</h2>
         <p><i class="fa-solid fa-at"></i> Email: martin@gmail.com</p>
@@ -31,6 +32,25 @@
         <br>
         <br>
         <h2 class="perfil" id="habilidades"><i class="fa-solid fa-turn-up"></i> Habilidades</h2>
+        <p>Inglés</p>
+        <div class="barra">
+            <div class="barra-pro" style="width:75%;">
+                <span class="barra-pro-tex">75%</span>
+            </div>
+        </div>
+        <p>Portugues</p>
+        <div class="barra">
+            <div class="barra-pro" style="width:90%;">
+                <span class="barra-pro-tex">90%</span>
+            </div>
+        </div>
+        <p>Visual Studio Code</p>
+        <div class="barra">
+            <div class="barra-pro" style="width:85%;">
+                <span class="barra-pro-tex">85%</span>
+            </div>
+        </div>
+        <input type="button" class="button" value="Click para mas info">
      </aside>
      <article>
         <h2 class="perfil"><i class="fa-solid fa-user"></i> Perfil</h2>
@@ -42,13 +62,13 @@
                 empecé a ofrecer mis servicios desde el 2021.</p>
                 <br>
         <h2 class="perfil" id="formacion"><i class="fa-solid fa-graduation-cap"></i> Formación Academica</h2>
-        <h4> 2010-2021 Administrativo en "La Sevillanita SRL"</h4>
-        <p>Me desempeñe realizando tareas administrativas de liquidación de sueldos, facturación, programación de tareas, inventarios, 
-            control de stock, seguimiento de transporte a través de gps,cargas en el sistema admis citrix y manejo del sistema SAP
+        <h4> 2007-2010 Tecnico superior en Administración de Empresas</h4>
+        <p> Titulo terciario, realizado en la escuela de Comercio en la provincia de Tucumán.
         </p>
-        <h4> 2021-Actualidad Diseñador Web</h4>
-        <p>Actualmente me encuentro realizando paginas web para negocios locales y algunas aplicaciones de Android, para web uso
-            html, css y javascript
+        <h4> 2021-2022 Desarrollador Full Stack</h4>
+        <p>
+            Curso realizado en una academia local llamada Full Stack, donde nos enseñaron sobre javascript, css y html. También recorrimos
+            boostrap, base de datos, react, etc.
         </p>
         <br>
         <h2 class="perfil" id="experiencia"><i class="fa-solid fa-briefcase"></i> Experiencia Laboral</h2>
@@ -60,12 +80,19 @@
         <p>Actualmente me encuentro realizando paginas web para negocios locales y algunas aplicaciones de Android, para web uso
             html, css y javascript
         </p>
-
+        <br>
+        <br>
      </article>
+    </div>
      <footer>
-
+        <div class="pie">
+     <p>Todos los derechos reservados <i class="fa-regular fa-copyright"></i></p>
+     <p>Mis redes sociales</p>
+     <i class="fa fa-facebook-official"></i>
+     <i class="fa fa-instagram"></i>
+     <i class="fa fa-linkedin"></i>
+    </div>
      </footer> 
-    
-    <!-- <script src="js/miscript.js"></script> -->
+    <script src="js/miscript.js"></script>
 </body>
 </html>
