--- a/index.html
+++ b/index.html
@@ -50,17 +50,16 @@
                 <span class="barra-pro-tex">85%</span>
             </div>
         </div>
-        <input type="button" class="button" value="Click para mas info">
      </aside>
      <article>
         <h2 class="perfil"><i class="fa-solid fa-user"></i> Perfil</h2>
-        <p class="miperfil">Eficiente Administrativo de Ventas con más de 5 años de experiencia en el área de 
+        <p id="cambiar">Eficiente Administrativo de Ventas con más de 5 años de experiencia en el área de 
                 facturación electrónica y manual, notas de crédito y atención a clientes. Aprendo muy rápido y me adapto 
                 fácilmente a cualquier tipo de proceso interno. He enfrentado crisis económicas fuertes en las empresas para 
                 las que he trabajado, desarrollando alta tolerancia al trabajo bajo presión, capacidad de trabajo en equipo 
                 y solución de problemas. Como trabajo paralelo llevaba diseñando paginas desde más de 10 años solo como hobbie hasta que 
                 empecé a ofrecer mis servicios desde el 2021.</p>
-                <br>
+        <input type="button" class="button"  id="boton" value="Click para más info">
         <h2 class="perfil" id="formacion"><i class="fa-solid fa-graduation-cap"></i> Formación Academica</h2>
         <h4> 2007-2010 Tecnico superior en Administración de Empresas</h4>
         <p> Titulo terciario, realizado en la escuela de Comercio en la provincia de Tucumán.
